# chemsolve

./: .gitignore  .travis.yml  FUTUREVERSION.md  LICENSE  MANIFEST.in  README.md  main.py  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
chemsolve/: __init__.py  _release.py  compound.py  element.py  periodictable.py  physics.py  ranking.py  reaction.py
chemsolve/electrochemistry/: __init__.py  ionic.py  molar.py  redox.py  titration.py
chemsolve/gases/: __init__.py  idealgas.py
chemsolve/quantum/: __init__.py  photoelectric.py  photon.py  wave.py
chemsolve/solutions/: __init__.py  molar.py  properties.py  titration.py
chemsolve/utils/: _unicode_constants.py  combustion.py  constants.py  conversion.py  errors.py  from_formula.py  parsing.py  past_code.pyi  periodictable.py  string_op.py  validation.py  vsepr.py  warnings.py
chemsolve/utils/assets/: PT_complete.csv
docs/: README.html  README.rst
docs/source/: compound_example.ipynb  conf.py  index.rst
examples/: compound_example.ipynb  element_example.ipynb  reaction_example.ipynb
tests/: compoundtest.py  elementtest.py  molartest.py  reactiontest.py
