[metadata]
name = chemsolve
author = Amogh Joshi
author-email = joshi.amoghn@gmail.com
summary = A low-level chemistry library for solving and practicing chemistry problems.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/amogh7joshi/chemsolve
license = MIT

[files]
packages = chemsolve
